# dynamodb-migrator

./: .gitignore  LICENSE  README.md  __main__.py  example.py  export_funcs.py  import_funcs.py  main.py  migrate.py  pyproject.toml
ddb_migrator/: __init__.py  export_funcs.py  import_funcs.py
